fix left right alignment not working and padding not working properly

--- a/src/gallery/common.scss
+++ b/src/gallery/common.scss
@@ -3,8 +3,13 @@
 .galleryberg-gallery-container {
 	overflow: hidden;
 	// Cropped Images.
+	&.alignright,
+	&.alignleft {
+		max-width: var(--wp--style--global--content-size, 420px) !important;
+	}
 	figure.galleryberg-image {
 		align-self: inherit;
+		overflow: hidden;
 		> div:not(.components-drop-zone),
 		> a {
 			display: flex;
